Apply BlueJ-source-420.zip