@@ -1,6 +1,6 @@
 /*
  This file is part of the BlueJ program. 
- Copyright (C) 1999-2010,2011,2013,2014,2016,2017  Michael Kolling and John Rosenberg
+ Copyright (C) 1999-2010,2011,2013,2014,2016,2017,2018  Michael Kolling and John Rosenberg
  
  This program is free software; you can redistribute it and/or 
  modify it under the terms of the GNU General Public License 
@@ -221,6 +221,12 @@ public class ObjectInspector extends Inspector
     public Region getContent()
     {
         return stackPane;
+    }
+
+    @Override
+    protected boolean shouldAutoUpdate()
+    {
+        return Config.isGreenfoot();
     }
 
     /**
@@ -467,7 +473,7 @@ public class ObjectInspector extends Inspector
         // mimic the public length field that arrays possess
         // according to the java spec...
         indexToSlotList = new LinkedList<Integer>();
-        indexToSlotList.add(0, new Integer(ARRAY_LENGTH_SLOT_VALUE));
+        indexToSlotList.add(0, Integer.valueOf(ARRAY_LENGTH_SLOT_VALUE));
 
         // the +1 here is due to the fact that if we do not have at least one
         // more than
@@ -488,7 +494,7 @@ public class ObjectInspector extends Inspector
 
             // now the first of our expansion slots
             newArray.add(new FieldInfo("[...]", ""));
-            indexToSlotList.add(new Integer(ARRAY_QUERY_SLOT_VALUE));
+            indexToSlotList.add(Integer.valueOf(ARRAY_QUERY_SLOT_VALUE));
 
             for (int i = VISIBLE_ARRAY_TAIL; i > 0; i--) {
                 // last 5 elements are displayed
